leptos_macro/tests/view/09_generic_prop_wrong_type.stderr
error[E0599]: the method `__check_generic_fun` exists for struct `InnerProps<bool>`, but its trait bounds were not satisfied
  --> tests/view/09_generic_prop_wrong_type.rs:10:48
   |
10 |             <Inner concrete_i32=42 generic_fun=true>
   |                                                ^^^^ method cannot be called on `InnerProps<bool>` due to unsatisfied trait bounds
...
17 | #[component]
   | ------------ method `__check_generic_fun` not found for this struct
   |
note: the following trait bounds were not satisfied:
      `bool: Fn<()>`
      `bool: FnOnce<()>`
  --> tests/view/09_generic_prop_wrong_type.rs:24:8
   |
17 | #[component]
   | ------------
...
24 |     F: Fn() -> bool,
   |        ^^^^^^^^^^^^
   |        |       |
   |        |       unsatisfied trait bound introduced here
   |        unsatisfied trait bound introduced here
